Update libraries and add comprehensive testing
- Updated to use new async_mqtt_client library with native async/await
- Integrated new syslog library from lib.py
- Added comprehensive logging throughout application
- Set up UV for Python dependency management
- Added 29 passing unit tests (async_mqtt_client and lib)
- Configured .gitignore for Python artifacts
- Added pyproject.toml with test dependencies
- Wrapped main execution in if __name__ == '__main__' for testability

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 cfgsecrets.py
 .vscode
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# UV
+.uv/
